Fix slot scrolling overflow

--- a/WebAppService/src/styles/BlockContainer.css
+++ b/WebAppService/src/styles/BlockContainer.css
@@ -7,4 +7,6 @@
 	transform: translate(-50%,-50%);
 	background-color:rgb(219, 219, 219);
 	z-index: 6;
+	border-radius: 36px;
+	box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.6), 0 17px 50px 0 rgba(0, 0, 0, 0.6);
 }
