--- a/WebAppService/src/styles/SlotView.css
+++ b/WebAppService/src/styles/SlotView.css
@@ -7,3 +7,7 @@
 .Slot--taken{
 	background-color:rgb(255, 200, 200);
 }
+.slot-container{
+	height: 300px;
+    overflow: scroll;
+}
